--- a/bravo2.html
+++ b/bravo2.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>LearnToCode</title>
+<title>Cocody</title>
 
 <!-- fonts -->
 <link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
@@ -16,12 +16,23 @@
 </head>
 
 <body>
-<div class="main around bounce animated">
+<div class="main around">
+  <header class="title">Les fonctions</header>
+  <nav class="nav">
+   <ul id="menu_horizontal">
+    <li><a href="index.html">Accueil</a></li>
+    <li><a href="variables-def.html">Les variables</a></li>
+    <li><a href="fonction-def.html">Les fonctions</a></li>
+    <li><a href="condition-def.html">Les conditions</a></li>
+    <li><a href="tableau-def.html"> Les tableaux</a></li>
+    <li><a href="">L'objet</a></li>
+	  </ul>
+  </nav>
   <header class="bravo">Bravo !</header>
   <div class="tuSais">
-    <div>Tu sais ce que c'est qu'une <span class="orange">fonction ! </span> </div>
+    <div>Tu sais ce que c’est qu’une <span class="orange">fonction ! </span> </div>
     <br>
   </div>
-  <a class="suite" href="condition.html">Suite</a> </div>
+  <a class="suite" href="condition-def.html">Suite</a> </div>
 </body>
 </html>
