--- a/bravo3.html
+++ b/bravo3.html
@@ -8,16 +8,16 @@
 
 <!-- fonts -->
 <link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
 
 <!-- styles -->
 <link rel="stylesheet" href="styles/reboot.css">
 <link rel="stylesheet" href="styles/styles.css">
+<link rel="stylesheet" href="styles/animate.css">
 </head>
 
 <body>
 <div class="main around">
-  <header class="title">Les conditions</header>
+  <header class="title">Les tableaux</header>
   <nav class="nav">
    <ul id="menu_horizontal">
     <li><a href="index.html">Accueil</a></li>
@@ -28,17 +28,11 @@
     <li><a href="">L'objet</a></li>
 	  </ul>
   </nav>
-   <img src="assets/separation.png"/>
-  <div class="instruction">Dans la dernière case, <span class="red">écris le<br>
-    salut que tu veux pour tes deux <br>
-    amis.</span> <br>
+  <header class="bravo">Bravo !</header>
+  <div class="tuSais">
+    <div>Tu sais ce que c’est qu’un <span class="orange">tableau ! </span> </div>
     <br>
-    <span class="purple">«else» </span>signifie <span class="purple">«Sinon...»</span> </div>
-  <div class="exercice"> <span class="purple">else </span><span class="blue">{</span><br>
-    <span class="blue3">console.log</span> <span class="blue">(‘
-    <input type="text" id="prenom-input" size="10" style="height:35px;" />
-    ’ + </span><span class="orange">nom</span><span class="blue">);<br>
-    }</span> </div>
-  <a class="suite" href="condition-3.html">Suite</a> </div>
+  </div>
+  <a class="suite" href="">Suite</a> </div>
 </body>
 </html>
