--- a/condition-3.html
+++ b/condition-3.html
@@ -6,19 +6,20 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title>Cocody</title>
 <script src="scripts/jquery-3.3.1.min.js"></script>
-<script src="scripts/fonction.js"></script>
-
+<script src="scripts/coucou.js"></script>
 <!-- fonts -->
 <link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
+
 <!-- styles -->
 <link rel="stylesheet" href="styles/reboot.css">
 <link rel="stylesheet" href="styles/styles.css">
+<link rel="stylesheet" href="styles/animate.css">
 </head>
 
 <body>
 <div class="main around">
-  <header class="title">Les fonctions</header>
+  <header class="title">Les conditions</header>
   <nav class="nav">
    <ul id="menu_horizontal">
     <li><a href="index.html">Accueil</a></li>
@@ -30,25 +31,13 @@
 	  </ul>
   </nav>
    <img src="assets/separation.png"/>
-  <div class="instruction"><span class="red">Choisis les valeurs de a et b !</span></div>
-  <div class="instruction"><span class="purple"> <br>
-    <br>
-    <br>
-    function</span> <span class="blue2">additionner</span><span class="blue">(a , b) { <br>
-    </span> <span class="blue3">return</span><span class="blue"> a + b ; <br>
-    } </span></div>
-  <div class="exercice"><span class="orange"> a =
-    <input id="chiffreA" type="text" size="2" style="height:35px;"/>
-    <br>
-    b =
-    <input id="chiffreB" type="text" size="2" style="height:35px;"/>
-    </span> <br>
-    <br>
-    La fonction somme renvoie<br>
+  <div class="instruction"> 
+    <!--<div class="animated tada" id="prenom-affichage"> </div>--> 
   </div>
-  <header class="title"></header>
-  <div id="total"></div>
-  <a class="suite" href="bravo2.html">Suite</a> </div>
-</div>
+  <div class="main around tada animated">
+    <div class="coucou"> </div>
+  </div>
+  <br>
+  <a class="suite" href="tableau-def.html">Suite</a></div>
 </body>
 </html>
