--- a/condition-def.html
+++ b/condition-def.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>LearnToCode</title>
+<title>Cocody</title>
 
 <!-- fonts -->
 <link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
@@ -19,8 +19,27 @@
 <body>
 <div class="main around bounceIn animated">
   <header class="title">Les conditions</header>
+  <nav class="nav">
+   <ul id="menu_horizontal">
+    <li><a href="index.html">Accueil</a></li>
+    <li><a href="variables-def.html">Les variables</a></li>
+    <li><a href="fonction-def.html">Les fonctions</a></li>
+    <li><a href="condition-def.html">Les conditions</a></li>
+    <li><a href="tableau-def.html"> Les tableaux</a></li>
+    <li><a href="">L'objet</a></li>
+	  </ul>
+  </nav>
   <div class="description">
-    <div></div>
+    <div>Pour effectuer une action 
+      seulement<br>
+      dans certains cas, ce sont les conditions <br>
+      que tu vas utiliser.<br>
+      <br>
+      Par exemple, tu vas vouloir
+      dire "salut"<br>
+      à tes meilleurs amis, alors que tu vas<br>
+      dire "bonjour" aux gens qui te sont <br>
+      moins proches. </div>
   </div>
   <a class="suite" href="condition.html">Allons découvrir ça ensemble !</a> </div>
 </body>
