--- a/fonction-def.html
+++ b/fonction-def.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>LearnToCode</title>
+<title>Cocody</title>
 
 <!-- fonts -->
 <link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
@@ -19,24 +19,26 @@
 <body>
 <div class="main around bounceIn animated">
   <header class="title">Les fonctions</header>
-  <div class="description">
-    <div><br>Une fonction, c’est comme une boîte<br>
-      à laquelle tu envoies des informations.<br>
-      En échange, après les avoir traitées, <br>
-      elles te renvoient un résultat.</div>
-  </div>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <div><span class="purple">function </span> <span class="blue2">somme</span><span class="blue">(</span><span class="orange">a</span><span class="blue">,</span> <span class="orange">b</span><span class="blue">) {</span><br>
+  <nav class="nav">
+   <ul id="menu_horizontal">
+    <li><a href="index.html">Accueil</a></li>
+    <li><a href="variables-def.html">Les variables</a></li>
+    <li><a href="fonction-def.html">Les fonctions</a></li>
+    <li><a href="condition-def.html">Les conditions</a></li>
+    <li><a href="tableau-def.html"> Les tableaux</a></li>
+    <li><a href="">L'objet</a></li>
+	  </ul>
+  </nav>
+  <div class="description"> Une fonction, c’est comme une boîte<br>
+    à laquelle tu envoies des informations.<br>
+    En échange, après les avoir traitées, <br>
+    elles te renvoient un résultat. <br>
+    <br>
+    <span class="purple">function </span> <span class="blue2">somme</span><span class="blue">(</span><span class="orange">a</span><span class="blue">,</span> <span class="orange">b</span><span class="blue">) {</span><br>
     <span class="blue3">return </span><span class="orange">a</span><span class="blue"> + </span><span class="orange"> b</span><span class="blue">;<br>
     } </span></div>
   <a class="suite" href="fonction.html"><br>
-  <br>Allons découvrir ça ensemble !</a> </div>
+  <br>
+  Allons découvrir ça ensemble !</a> </div>
 </body>
 </html>
