--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
-
-<html lang="en"><head>
+<!--etre plus didactique
+faire navigation (revenir en arriere, choisir ou on veut aller, savoir ou on est, plus rassurant)
+plus rigoureux sur la présentation
+inverser sens
+-->
+<html lang="en">
+<head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>LearnToCode</title>
+<title>Cocody</title>
 
 <!-- fonts -->
 <link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
@@ -16,11 +21,26 @@
 </head>
 
 <body>
-<div class="main around bounceIn animated">
-  <header class="title">Cocody</header>
+<div class="main bounceIn animated">
+  <header class="indexTitle">Cocody</header>
   <div class="description">
-    <div>Apprends à coder en t'amusant avec Cocody !</div>
+    <div>Apprends à coder en t'amusant <br>
+      avec Cocody ! <br>
+      <br>
+      Les bases de la programmation <br>
+      n'auront plus 
+      de secret pour toi !</div>
   </div>
-  <a class="suite" href="variables-def.html">Allons découvrir ça ensemble !</a></div>
+  <nav class="nav">
+   <ul id="menu_horizontal">
+    <li><a href="index.html">Accueil</a></li>
+    <li><a href="variables-def.html">Les variables</a></li>
+    <li><a href="fonction-def.html">Les fonctions</a></li>
+    <li><a href="condition-def.html">Les conditions</a></li>
+    <li><a href="tableau-def.html"> Les tableaux</a></li>
+    <li><a href="">L'objet</a></li>
+	  </ul>
+  </nav>
+  <a class="suite" href="variables-def.html">Commence par le commencement !</a></div>
 </body>
 </html>
