--- a/tableau-def.html
+++ b/tableau-def.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -13,11 +12,12 @@
 <!-- styles -->
 <link rel="stylesheet" href="styles/reboot.css">
 <link rel="stylesheet" href="styles/styles.css">
+<link rel="stylesheet" href="styles/animate.css">
 </head>
 
 <body>
-<div class="main around">
-  <header class="title">Les conditions</header>
+<div class="main around bounceIn animated">
+  <header class="title">Les tableaux</header>
   <nav class="nav">
    <ul id="menu_horizontal">
     <li><a href="index.html">Accueil</a></li>
@@ -28,17 +28,9 @@
     <li><a href="">L'objet</a></li>
 	  </ul>
   </nav>
-   <img src="assets/separation.png"/>
-  <div class="instruction">Dans la dernière case, <span class="red">écris le<br>
-    salut que tu veux pour tes deux <br>
-    amis.</span> <br>
-    <br>
-    <span class="purple">«else» </span>signifie <span class="purple">«Sinon...»</span> </div>
-  <div class="exercice"> <span class="purple">else </span><span class="blue">{</span><br>
-    <span class="blue3">console.log</span> <span class="blue">(‘
-    <input type="text" id="prenom-input" size="10" style="height:35px;" />
-    ’ + </span><span class="orange">nom</span><span class="blue">);<br>
-    }</span> </div>
-  <a class="suite" href="condition-3.html">Suite</a> </div>
+  <div class="description">
+    <div>Un tableau</div>
+  </div>
+  <a class="suite" href="tableau.html">Allons découvrir ça ensemble !</a></div>
 </body>
 </html>
