--- a/variables-def.html
+++ b/variables-def.html
@@ -1,15 +1,13 @@
-<!--index
->hiérarchiser à l’aide d’une grille
->typo diff. instructions/exercice
+<!--
 >nom de l’element qu’on étudie sur chaque page
->droite-gauche
 >sons-->
 
-<html lang="en"><head>
+<html lang="en">
+<head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>LearnToCode</title>
+<title>Cocody</title>
 
 <!-- fonts -->
 <link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
@@ -24,6 +22,16 @@
 <body>
 <div class="main around bounceIn animated">
   <header class="title">Les variables</header>
+  <nav class="nav">
+   <ul id="menu_horizontal">
+    <li><a href="index.html">Accueil</a></li>
+    <li><a href="variables-def.html">Les variables</a></li>
+    <li><a href="fonction-def.html">Les fonctions</a></li>
+    <li><a href="condition-def.html">Les conditions</a></li>
+    <li><a href="tableau-def.html"> Les tableaux</a></li>
+    <li><a href="">L'objet</a></li>
+	  </ul>
+  </nav>
   <div class="description">
     <div>Une variable te permet de stocker <br>
       une ou plusieurs informations.</div>
