--- a/variables.html
+++ b/variables.html
@@ -4,8 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>LearnToCode</title>
-
+<title>Cocody</title>
 <script src="scripts/jquery-3.3.1.min.js"></script>
 <script src="scripts/variables.js"></script>
 <!-- fonts -->
@@ -18,22 +17,37 @@
 
 <body>
 <div class="main around">
-  <div class="instruction">Pour commencer, crée une<br>
-    variable avec ton prénom <br>
-    dans la case verte.</div>
-  <div class="variable-schema">
-    <div class="variable-name"><span class="gray">nom de la variable</span></div>
-    <div class="variable-declaration"> <span class="purple">var</span> <span class="gray">tonPrénom</span><span class="purple"> =</span> <span class="blue">‘
-      <input type="text" id="prenom-input" size="10" style="height:35px;" /> ’
-        <div class="variable-keyword"><span class="purple">mot clé pour<br>
-        déclarer une variable</span></div>
-       <div class="variable-value"><span class="green2">valeur<br>
-        de la variable</span></div>
+  <header class="title">Les variables</header>
+  <nav class="nav">
+   <ul id="menu_horizontal">
+    <li><a href="index.html">Accueil</a></li>
+    <li><a href="variables-def.html">Les variables</a></li>
+    <li><a href="fonction-def.html">Les fonctions</a></li>
+    <li><a href="condition-def.html">Les conditions</a></li>
+    <li><a href="tableau-def.html"> Les tableaux</a></li>
+    <li><a href="">L'objet</a></li>
+	  </ul>
+  </nav>
+  <img src="assets/separation.png"/>
+  <div class="instruction">Pour commencer, <span class="red">crée une<br>
+    variable avec ton prénom dans<br>
+    la case verte. </span><br>
+    <br>
+    <span class="purple">var</span> est le mot clé pour <br>
+    déclarer une variable.<br>
+    <br>
+    <span class="purple">= </span> permet de lui donner une <br>
+    valeur.<br>
+    <br>
+    <span class="green2">Ton prénom </span> est la valeur de <br>
+    la variable.</div>
     
-      
-    </div>
+  <div class="variable-schema">
+    <div class="variable-declaration"> <span class="purple">var</span> <span class="gray">tonPrénom</span><span class="purple"> =</span> <span class="blue">‘
+      <input type="text" id="prenom-input" size="10" style="height:35px;" />
+      ’ </div>
   </div>
-  <a class="suite" href="bravo.html">Suite</a> </div>
   
+  <a class="suite" href="bravo.html">Suite</a> </div>
 </body>
 </html>
