daniel le plus fort

--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@ inverser sens
 
 <!-- styles -->
 <link rel="stylesheet" href="styles/reboot.css">
-<link rel="stylesheet" href="styles/styles.css">
+<link rel="stylesheet" href="styles/styles2.css">
 <link rel="stylesheet" href="styles/animate.css">
 </head>
 
 <body>
 <div class="main bounceIn animated">
-  <header class="indexTitle">Cocody</header>
+ <div class="left">
+  <header class="title index">Cocody</header>
   <div class="description">
     <div>Apprends à coder en t'amusant <br>
       avec Cocody ! <br>
@@ -31,6 +32,8 @@ inverser sens
       n'auront plus 
       de secret pour toi !</div>
   </div>
+ </div> 
+ <div class="right">
   <nav class="nav">
    <ul id="menu_horizontal">
     <li><a href="index.html">Accueil</a></li>
@@ -42,5 +45,6 @@ inverser sens
 	  </ul>
   </nav>
   <a class="suite" href="variables-def.html">Commence par le commencement !</a></div>
+ </div>
 </body>
 </html>
