--- a/variables-def.html
+++ b/variables-def.html
@@ -15,30 +15,34 @@
 
 <!-- styles -->
 <link rel="stylesheet" href="styles/reboot.css">
-<link rel="stylesheet" href="styles/styles.css">
+<link rel="stylesheet" href="styles/styles2.css">
 <link rel="stylesheet" href="styles/animate.css">
 </head>
 
 <body>
-<div class="main around bounceIn animated">
-  <header class="title">Les variables</header>
-  <nav class="nav">
-   <ul id="menu_horizontal">
-    <li><a href="index.html">Accueil</a></li>
-    <li><a href="variables-def.html">Les variables</a></li>
-    <li><a href="fonction-def.html">Les fonctions</a></li>
-    <li><a href="condition-def.html">Les conditions</a></li>
-    <li><a href="tableau-def.html"> Les tableaux</a></li>
-    <li><a href="">L'objet</a></li>
-	  </ul>
-  </nav>
-  <div class="description">
-    <div>Une variable te permet de stocker <br>
-      une ou plusieurs informations.</div>
-    <div>L’idée est de pouvoir modifier cette <br>
-      information et de l’utiliser quand tu <br>
-      veux.</div>
+<div class="main bounceIn animated">
+  <div class="left">
+    <header class="title">Les variables</header>
+    <div class="description">
+      <div>Une variable te permet de stocker <br>
+        une ou plusieurs informations.</div>
+      <div>L’idée est de pouvoir modifier cette <br>
+        information et de l’utiliser quand tu <br>
+        veux.</div>
+    </div>
   </div>
-  <a class="suite" href="variables.html">Allons découvrir ça ensemble !</a></div>
+  <div class="right">
+    <nav class="nav">
+      <ul id="menu_horizontal">
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="variables-def.html">Les variables</a></li>
+        <li><a href="fonction-def.html">Les fonctions</a></li>
+        <li><a href="condition-def.html">Les conditions</a></li>
+        <li><a href="tableau-def.html"> Les tableaux</a></li>
+        <li><a href="">L'objet</a></li>
+      </ul>
+    </nav>
+      <a class="suite" href="variables.html">Allons découvrir ça ensemble !</a></div>
+  </div>
 </body>
 </html>
