--- a/variables.html
+++ b/variables.html
@@ -12,42 +12,43 @@
 <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
 <!-- styles -->
 <link rel="stylesheet" href="styles/reboot.css">
-<link rel="stylesheet" href="styles/styles.css">
+<link rel="stylesheet" href="styles/styles2.css">
 </head>
 
 <body>
 <div class="main around">
-  <header class="title">Les variables</header>
-  <nav class="nav">
-   <ul id="menu_horizontal">
-    <li><a href="index.html">Accueil</a></li>
-    <li><a href="variables-def.html">Les variables</a></li>
-    <li><a href="fonction-def.html">Les fonctions</a></li>
-    <li><a href="condition-def.html">Les conditions</a></li>
-    <li><a href="tableau-def.html"> Les tableaux</a></li>
-    <li><a href="">L'objet</a></li>
-	  </ul>
-  </nav>
-  <img src="assets/separation.png"/>
-  <div class="instruction">Pour commencer, <span class="red">crée une<br>
-    variable avec ton prénom dans<br>
-    la case verte. </span><br>
-    <br>
-    <span class="purple">var</span> est le mot clé pour <br>
-    déclarer une variable.<br>
-    <br>
-    <span class="purple">= </span> permet de lui donner une <br>
-    valeur.<br>
-    <br>
-    <span class="green2">Ton prénom </span> est la valeur de <br>
-    la variable.</div>
-    
-  <div class="variable-schema">
-    <div class="variable-declaration"> <span class="purple">var</span> <span class="gray">tonPrénom</span><span class="purple"> =</span> <span class="blue">‘
-      <input type="text" id="prenom-input" size="10" style="height:35px;" />
-      ’ </div>
+  <div class="left">
+    <header class="title">Les variables</header>
+    <div class="instruction">Pour commencer, <span class="red">crée une<br>
+      variable avec ton prénom dans<br>
+      la case verte. </span><br>
+      <br>
+      <span class="purple">var</span> est le mot clé pour <br>
+      déclarer une variable.<br>
+      <br>
+      <span class="purple">= </span> permet de lui donner une <br>
+      valeur.<br>
+      <br>
+      <span class="green2">Ton prénom </span> est la valeur de <br>
+      la variable.</div>
   </div>
-  
-  <a class="suite" href="bravo.html">Suite</a> </div>
+  <div class="right">
+    <nav class="nav">
+      <ul id="menu_horizontal">
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="variables-def.html">Les variables</a></li>
+        <li><a href="fonction-def.html">Les fonctions</a></li>
+        <li><a href="condition-def.html">Les conditions</a></li>
+        <li><a href="tableau-def.html"> Les tableaux</a></li>
+        <li><a href="">L'objet</a></li>
+      </ul>
+    </nav>
+    <div class="variable-schema">
+      <div class="variable-declaration"> <span class="purple">var</span> <span class="gray">tonPrénom</span><span class="purple"> =</span> <span class="blue">‘
+        <input type="text" id="prenom-input" size="10" style="height:35px;" />
+        ’ </div>
+    </div>
+    <a class="suite" href="bravo.html">Suite</a> </div>
+</div>
 </body>
 </html>
