--- a/bravo.html
+++ b/bravo.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
 <!-- styles -->
 <link rel="stylesheet" href="styles/reboot.css">
-<link rel="stylesheet" href="styles/styles.css">
+<link rel="stylesheet" href="styles/styles2.css">
 <link rel="stylesheet" href="styles/animate.css">
 </head>
 
