--- a/coucou.html
+++ b/coucou.html
@@ -13,7 +13,7 @@
 
 <!-- styles -->
 <link rel="stylesheet" href="styles/reboot.css">
-<link rel="stylesheet" href="styles/styles.css">
+<link rel="stylesheet" href="styles/styles2.css">
 <link rel="stylesheet" href="styles/animate.css">
 </head>
 
