--- a/fonction-def.html
+++ b/fonction-def.html
@@ -12,7 +12,7 @@
 
 <!-- styles -->
 <link rel="stylesheet" href="styles/reboot.css">
-<link rel="stylesheet" href="styles/styles.css">
+<link rel="stylesheet" href="styles/styles2.css">
 <link rel="stylesheet" href="styles/animate.css">
 </head>
 
