--- a/bravo.html
+++ b/bravo.html
@@ -1,38 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Cocody</title>
 
-<!-- fonts -->
-<link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
-<!-- styles -->
-<link rel="stylesheet" href="styles/reboot.css">
-<link rel="stylesheet" href="styles/styles2.css">
-<link rel="stylesheet" href="styles/animate.css">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Cocody</title>
+
+    <!-- fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
+    <!-- styles -->
+    <link rel="stylesheet" href="styles/reboot.css">
+    <link rel="stylesheet" href="styles/styles2.css">
+    <link rel="stylesheet" href="styles/animate.css">
 </head>
 
-<body>
-<div class="main around">
-  <header class="title">Les variables</header>
-  <nav class="nav">
-   <ul id="menu_horizontal">
-    <li><a href="index.html">Accueil</a></li>
-    <li><a href="variables-def.html">Les variables</a></li>
-    <li><a href="fonction-def.html">Les fonctions</a></li>
-    <li><a href="condition-def.html">Les conditions</a></li>
-    <li><a href="tableau-def.html"> Les tableaux</a></li>
-    <li><a href="">L'objet</a></li>
-	  </ul>
-  </nav>
-  <header class="bravo">Bravo !</header>
-  <div class="tuSais">
-    <div>Tu sais ce que c’est qu’une <span class="orange">variable ! </span> </div>
-    <br>
-  </div>
-  <a class="suite" href="coucou.html">Suite</a> </div>
+<body class="bravo-body">
+    <div class="main bounceIn animated">
+        <div class="left">
+            <header class="title bravo">Bravo !</header>
+            <div class="tuC">
+                Tu sais ce que c’est qu’une
+                <span class="orange">variable ! </span>
+            </div>
+        </div>
+        <div class="right">
+            <nav class="nav">
+                <ul id="menu_horizontal">
+                    <li>
+                        <a href="index.html">Accueil</a>
+                    </li>
+                    <li>
+                        <a href="variables-def.html">Les variables</a>
+                    </li>
+                    <li>
+                        <a href="fonction-def.html">Les fonctions</a>
+                    </li>
+                    <li>
+                        <a href="condition-def.html">Les conditions</a>
+                    </li>
+                    <li>
+                        <a href="tableau-def.html"> Les tableaux</a>
+                    </li>
+                    <li>
+                        <a href="">L'objet</a>
+                    </li>
+                </ul>
+            </nav>
+            <div>
+                <img src="./assets/anim_1.gif" />
+            </div>
+            <a class="suite" href="coucou.html">Suite</a>
+        </div>
+    </div>
 </body>
+
 </html>
