--- a/fonction-def.html
+++ b/fonction-def.html
@@ -1,44 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Cocody</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Cocody</title>
 
-<!-- fonts -->
-<link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
+    <!-- fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
 
-<!-- styles -->
-<link rel="stylesheet" href="styles/reboot.css">
-<link rel="stylesheet" href="styles/styles2.css">
-<link rel="stylesheet" href="styles/animate.css">
+    <!-- styles -->
+    <link rel="stylesheet" href="styles/reboot.css">
+    <link rel="stylesheet" href="styles/styles2.css">
+    <link rel="stylesheet" href="styles/animate.css">
 </head>
 
 <body>
-<div class="main around bounceIn animated">
-  <header class="title">Les fonctions</header>
-  <nav class="nav">
-   <ul id="menu_horizontal">
-    <li><a href="index.html">Accueil</a></li>
-    <li><a href="variables-def.html">Les variables</a></li>
-    <li><a href="fonction-def.html">Les fonctions</a></li>
-    <li><a href="condition-def.html">Les conditions</a></li>
-    <li><a href="tableau-def.html"> Les tableaux</a></li>
-    <li><a href="">L'objet</a></li>
-	  </ul>
-  </nav>
-  <div class="description"> Une fonction, c’est comme une boîte<br>
-    à laquelle tu envoies des informations.<br>
-    En échange, après les avoir traitées, <br>
-    elles te renvoient un résultat. <br>
-    <br>
-    <span class="purple">function </span> <span class="blue2">somme</span><span class="blue">(</span><span class="orange">a</span><span class="blue">,</span> <span class="orange">b</span><span class="blue">) {</span><br>
-    <span class="blue3">return </span><span class="orange">a</span><span class="blue"> + </span><span class="orange"> b</span><span class="blue">;<br>
-    } </span></div>
-  <a class="suite" href="fonction.html"><br>
-  <br>
-  Allons découvrir ça ensemble !</a> </div>
+    <div class="main bounceIn animated">
+        <div class="left">
+            <header class="title">Les fonctions</header>
+            <div class="description"> Une fonction, c’est comme une boîte
+                <br> à laquelle tu envoies des informations.
+                <br> En échange, après les avoir traitées,
+                <br> elles te renvoient un résultat.
+                <br>
+                <br>
+                <span class="purple">function </span>
+                <span class="blue2">additionner</span>
+                <span class="blue">(</span>
+                <span class="orange">a</span>
+                <span class="blue">,</span>
+                <span class="orange">b</span>
+                <span class="blue">) {</span>
+                <br>
+                <span class="blue3">return </span>
+                <span class="orange">a</span>
+                <span class="blue"> + </span>
+                <span class="orange"> b</span>
+                <span class="blue">;
+                    <br> } </span>
+            </div>
+        </div>
+        <div class="right">
+            <nav class="nav">
+                <ul id="menu_horizontal">
+                    <li>
+                        <a href="index.html">Accueil</a>
+                    </li>
+                    <li>
+                        <a href="variables-def.html">Les variables</a>
+                    </li>
+                    <li>
+                        <a href="fonction-def.html">Les fonctions</a>
+                    </li>
+                    <li>
+                        <a href="condition-def.html">Les conditions</a>
+                    </li>
+                    <li>
+                        <a href="tableau-def.html"> Les tableaux</a>
+                    </li>
+                    <li>
+                        <a href="">L'objet</a>
+                    </li>
+                </ul>
+            </nav>
+            <a class="suite" href="coucou.html">
+                <br>
+                <br> Allons découvrir ça ensemble !</a>
+        </div>
+    </div>
 </body>
+
 </html>
