--- a/fonction.html
+++ b/fonction.html
@@ -1,54 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Cocody</title>
-<script src="scripts/jquery-3.3.1.min.js"></script>
-<script src="scripts/fonction.js"></script>
 
-<!-- fonts -->
-<link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
-<!-- styles -->
-<link rel="stylesheet" href="styles/reboot.css">
-<link rel="stylesheet" href="styles/styles.css">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Cocody</title>
+    <script src="scripts/jquery-3.3.1.min.js"></script>
+    <script src="scripts/fonction.js"></script>
+
+    <!-- fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
+    <!-- styles -->
+    <!-- styles -->
+    <link rel="stylesheet" href="styles/reboot.css">
+    <link rel="stylesheet" href="styles/styles2.css">
+    <link rel="stylesheet" href="styles/animate.css">
 </head>
 
 <body>
-<div class="main around">
-  <header class="title">Les fonctions</header>
-  <nav class="nav">
-   <ul id="menu_horizontal">
-    <li><a href="index.html">Accueil</a></li>
-    <li><a href="variables-def.html">Les variables</a></li>
-    <li><a href="fonction-def.html">Les fonctions</a></li>
-    <li><a href="condition-def.html">Les conditions</a></li>
-    <li><a href="tableau-def.html"> Les tableaux</a></li>
-    <li><a href="">L'objet</a></li>
-	  </ul>
-  </nav>
-   <img src="assets/separation.png"/>
-  <div class="instruction"><span class="red">Choisis les valeurs de a et b !</span></div>
-  <div class="instruction"><span class="purple"> <br>
-    <br>
-    <br>
-    function</span> <span class="blue2">additionner</span><span class="blue">(a , b) { <br>
-    </span> <span class="blue3">return</span><span class="blue"> a + b ; <br>
-    } </span></div>
-  <div class="exercice"><span class="orange"> a =
-    <input id="chiffreA" type="text" size="2" style="height:35px;"/>
-    <br>
-    b =
-    <input id="chiffreB" type="text" size="2" style="height:35px;"/>
-    </span> <br>
-    <br>
-    La fonction somme renvoie<br>
-  </div>
-  <header class="title"></header>
-  <div id="total"></div>
-  <a class="suite" href="bravo2.html">Suite</a> </div>
-</div>
+    <div class="main bounceIn animated">
+        <div class="left">
+            <header class="title">Les fonctions</header>
+            <div class="instruction">
+                <span class="red">Choisis les valeurs de a et b !</span>
+            </div>
+            <div class="instruction">
+                <span class="purple">
+                    <br>
+                    <br>
+                    <br> function
+                </span>
+                <span class="blue2">additionner</span>
+                <span class="blue">(a , b) {
+                    <br>
+                </span>
+                <span class="blue3">return</span>
+                <span class="blue"> a + b ;
+                    <br> } </span>
+            </div>
+        </div>
+        <div class="right">
+            <nav class="nav">
+                <ul id="menu_horizontal">
+                    <li>
+                        <a href="index.html">Accueil</a>
+                    </li>
+                    <li>
+                        <a href="variables-def.html">Les variables</a>
+                    </li>
+                    <li>
+                        <a href="fonction-def.html">Les fonctions</a>
+                    </li>
+                    <li>
+                        <a href="condition-def.html">Les conditions</a>
+                    </li>
+                    <li>
+                        <a href="tableau-def.html"> Les tableaux</a>
+                    </li>
+                    <li>
+                        <a href="">L'objet</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="data">
+                <div class="exercice">
+                    <span class="orange"> a =
+                        <input id="chiffreA" type="text" size="2" style="height:35px;" />
+                        <br> b =
+                        <input id="chiffreB" type="text" size="2" style="height:35px;" />
+                    </span>
+                    <br>
+                    <br> La fonction somme renvoie
+                    <br>
+                </div>
+                <header class="title"></header>
+                <div id="total"></div>
+            </div>
+            <a class="suite" href="bravo2.html">Allons découvrir ça ensemble !</a>
+        </div>
+    </div>
 </body>
+
 </html>
