--- a/bravo.html
+++ b/bravo.html
@@ -16,17 +16,17 @@
     <link rel="stylesheet" href="styles/animate.css">
 </head>
 
-<body class="bravo-body">
-    <div class="main bounceIn animated">
+<body>
+    <div class="main animated fadeIn">
         <div class="left">
-            <header class="title bravo">Bravo !</header>
+            <header class="title bravo animated slideInLeft">Bravo !</header>
             <div class="tuC">
                 Tu sais ce que c’est qu’une
                 <span class="orange">variable ! </span>
             </div>
         </div>
         <div class="right">
-            <nav class="nav">
+            <nav class="nav animated slideInRight">
                 <ul id="menu_horizontal">
                     <li>
                         <a href="index.html">Accueil</a>
@@ -48,9 +48,7 @@
                     </li>
                 </ul>
             </nav>
-            <div>
-                <img src="./assets/anim_1.gif" />
-            </div>
+            <img class="cocody-bravo animated fadeInUpBig" src="./assets/cocody1.gif" />
             <a class="suite" href="coucou.html">Suite</a>
         </div>
     </div>
