--- a/fonction.html
+++ b/fonction.html
@@ -26,7 +26,7 @@
             <div class="instruction">
                 <span class="red">Choisis les valeurs de a et b !</span>
             </div>
-            <div class="instruction">
+            <div class="instruction code">
                 <span class="purple">
                     <br>
                     <br>
@@ -36,7 +36,7 @@
                 <span class="blue">(a , b) {
                     <br>
                 </span>
-                <span class="blue3">return</span>
+                <span class="blue3 indent-1">return</span>
                 <span class="blue"> a + b ;
                     <br> } </span>
             </div>
@@ -65,7 +65,7 @@
                 </ul>
             </nav>
             <div class="data">
-                <div class="exercice">
+                <div class="exercice ">
                     <span class="orange"> a =
                         <input id="chiffreA" type="text" size="2" style="height:35px;" />
                         <br> b =
@@ -78,7 +78,7 @@
                 <header class="title"></header>
                 <div id="total"></div>
             </div>
-            <a class="suite" href="bravo2.html">Allons découvrir ça ensemble !</a>
+            <a class="suite" href="bravo2.html"> Suite </a>
         </div>
     </div>
 </body>
