--- a/index.html
+++ b/index.html
@@ -4,47 +4,61 @@ plus rigoureux sur la présentation
 inverser sens
 -->
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Cocody</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Cocody</title>
 
-<!-- fonts -->
-<link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
+    <!-- fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
 
-<!-- styles -->
-<link rel="stylesheet" href="styles/reboot.css">
-<link rel="stylesheet" href="styles/styles2.css">
-<link rel="stylesheet" href="styles/animate.css">
+    <!-- styles -->
+    <link rel="stylesheet" href="styles/reboot.css">
+    <link rel="stylesheet" href="styles/styles2.css">
+    <link rel="stylesheet" href="styles/animate.css">
 </head>
 
 <body>
-<div class="main bounceIn animated">
- <div class="left">
-  <header class="title index">Cocody</header>
-  <div class="description">
-    <div>Apprends à coder en t'amusant <br>
-      avec Cocody ! <br>
-      <br>
-      Les bases de la programmation <br>
-      n'auront plus 
-      de secret pour toi !</div>
-  </div>
- </div> 
- <div class="right">
-  <nav class="nav">
-   <ul id="menu_horizontal">
-    <li><a href="index.html">Accueil</a></li>
-    <li><a href="variables-def.html">Les variables</a></li>
-    <li><a href="fonction-def.html">Les fonctions</a></li>
-    <li><a href="condition-def.html">Les conditions</a></li>
-    <li><a href="tableau-def.html"> Les tableaux</a></li>
-    <li><a href="">L'objet</a></li>
-	  </ul>
-  </nav>
-  <a class="suite" href="variables-def.html">Commence par le commencement !</a></div>
- </div>
+    <div class="main bounceIn animated">
+        <div class="left">
+            <header class="title index">Cocody</header>
+            <div class="description">
+                <p>Apprends à coder en t'amusant avec Cocody !</p>
+                <p>On va parcourir un petit chemin ensemble, et je vais tout faire pour que tu deviennes un super héros de la
+                    programmation !</p>
+                <p>A la fin, la programmation n'aura plus aucun secret pour toi...</p>
+                <p>On va commencer par le commencement : les variables !</p>
+            </div>
+        </div>
+        <div class="right">
+            <nav class="nav">
+                <ul id="menu_horizontal">
+                    <li>
+                        <a href="index.html">Accueil</a>
+                    </li>
+                    <li>
+                        <a href="variables-def.html">Les variables</a>
+                    </li>
+                    <li>
+                        <a href="fonction-def.html">Les fonctions</a>
+                    </li>
+                    <li>
+                        <a href="condition-def.html">Les conditions</a>
+                    </li>
+                    <li>
+                        <a href="tableau-def.html"> Les tableaux</a>
+                    </li>
+                    <li>
+                        <a href="">L'objet</a>
+                    </li>
+                </ul>
+            </nav>
+            <a class="suite" href="variables-def.html">C'est parti !</a>
+        </div>
+    </div>
 </body>
+
 </html>
