--- a/variables-def.html
+++ b/variables-def.html
@@ -3,46 +3,61 @@
 >sons-->
 
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Cocody</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Cocody</title>
 
-<!-- fonts -->
-<link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
+    <script src="scripts/variables-def.js"></script>
 
-<!-- styles -->
-<link rel="stylesheet" href="styles/reboot.css">
-<link rel="stylesheet" href="styles/styles2.css">
-<link rel="stylesheet" href="styles/animate.css">
+    <!-- fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
+
+    <!-- styles -->
+    <link rel="stylesheet" href="styles/reboot.css">
+    <link rel="stylesheet" href="styles/styles2.css">
+    <link rel="stylesheet" href="styles/animate.css">
 </head>
 
 <body>
-<div class="main bounceIn animated">
-  <div class="left">
-    <header class="title">Les variables</header>
-    <div class="description">
-      <div>Une variable te permet de stocker <br>
-        une ou plusieurs informations.</div>
-      <div>L’idée est de pouvoir modifier cette <br>
-        information et de l’utiliser quand tu <br>
-        veux.</div>
+    <div class="main bounceIn animated">
+        <div class="left">
+            <header class="title">Les variables</header>
+            <div class="description">
+                <p>La vie, c'est un ensemble de variables, et en fait le code, c'est pareil !</p>
+                <p>Tu vas avoir plein d'informations, et il faut ranger ces informations dans des cases.</p>
+                <p>Ces cases, ce sont les variables.</p>
+            </div>
+        </div>
+        <div class="right">
+            <nav class="nav">
+                <ul id="menu_horizontal">
+                    <li>
+                        <a href="index.html">Accueil</a>
+                    </li>
+                    <li>
+                        <a href="variables-def.html">Les variables</a>
+                    </li>
+                    <li>
+                        <a href="fonction-def.html">Les fonctions</a>
+                    </li>
+                    <li>
+                        <a href="condition-def.html">Les conditions</a>
+                    </li>
+                    <li>
+                        <a href="tableau-def.html"> Les tableaux</a>
+                    </li>
+                    <li>
+                        <a href="">L'objet</a>
+                    </li>
+                </ul>
+            </nav>
+            <a class="suite" href="variables.html">Allons découvrir les variables ensemble !</a>
+        </div>
     </div>
-  </div>
-  <div class="right">
-    <nav class="nav">
-      <ul id="menu_horizontal">
-        <li><a href="index.html">Accueil</a></li>
-        <li><a href="variables-def.html">Les variables</a></li>
-        <li><a href="fonction-def.html">Les fonctions</a></li>
-        <li><a href="condition-def.html">Les conditions</a></li>
-        <li><a href="tableau-def.html"> Les tableaux</a></li>
-        <li><a href="">L'objet</a></li>
-      </ul>
-    </nav>
-      <a class="suite" href="variables.html">Allons découvrir ça ensemble !</a></div>
-  </div>
 </body>
+
 </html>
