--- a/condition-def.html
+++ b/condition-def.html
@@ -1,46 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Cocody</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Cocody</title>
 
-<!-- fonts -->
-<link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
+    <!-- fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
 
-<!-- styles -->
-<link rel="stylesheet" href="styles/reboot.css">
-<link rel="stylesheet" href="styles/styles.css">
-<link rel="stylesheet" href="styles/animate.css">
+    <!-- styles -->
+    <link rel="stylesheet" href="styles/reboot.css">
+    <link rel="stylesheet" href="styles/styles2.css">
+    <link rel="stylesheet" href="styles/animate.css">
 </head>
 
 <body>
-<div class="main around bounceIn animated">
-  <header class="title">Les conditions</header>
-  <nav class="nav">
-   <ul id="menu_horizontal">
-    <li><a href="index.html">Accueil</a></li>
-    <li><a href="variables-def.html">Les variables</a></li>
-    <li><a href="fonction-def.html">Les fonctions</a></li>
-    <li><a href="condition-def.html">Les conditions</a></li>
-    <li><a href="tableau-def.html"> Les tableaux</a></li>
-    <li><a href="">L'objet</a></li>
-	  </ul>
-  </nav>
-  <div class="description">
-    <div>Pour effectuer une action 
-      seulement<br>
-      dans certains cas, ce sont les conditions <br>
-      que tu vas utiliser.<br>
-      <br>
-      Par exemple, tu vas vouloir
-      dire "salut"<br>
-      à tes meilleurs amis, alors que tu vas<br>
-      dire "bonjour" aux gens qui te sont <br>
-      moins proches. </div>
-  </div>
-  <a class="suite" href="condition.html">Allons découvrir ça ensemble !</a> </div>
+    <div class="main bounceIn animated">
+        <div class="left">
+            <header class="title tight">Les conditions</header>
+            <div class="description">
+                <div>Pour effectuer une action seulement
+                    <br> dans certains cas, ce sont les conditions
+                    <br> que tu vas utiliser.
+                    <br>
+                    <br> Par exemple, tu vas vouloir dire "salut"
+                    <br> à tes meilleurs amis, alors que tu vas
+                    <br> dire "bonjour" aux gens qui te sont
+                    <br> moins proches. </div>
+            </div>
+        </div>
+        <div class="right">
+            <nav class="nav">
+                <ul id="menu_horizontal">
+                    <li>
+                        <a href="index.html">Accueil</a>
+                    </li>
+                    <li>
+                        <a href="variables-def.html">Les variables</a>
+                    </li>
+                    <li>
+                        <a href="fonction-def.html">Les fonctions</a>
+                    </li>
+                    <li>
+                        <a href="condition-def.html">Les conditions</a>
+                    </li>
+                    <li>
+                        <a href="tableau-def.html"> Les tableaux</a>
+                    </li>
+                    <li>
+                        <a href="">L'objet</a>
+                    </li>
+                </ul>
+            </nav>
+            <a class="suite" href="condition.html">
+                <br>
+                <br> Allons découvrir ça ensemble !</a>
+        </div>
+    </div>
 </body>
+
 </html>
