--- a/fonction-def.html
+++ b/fonction-def.html
@@ -27,20 +27,22 @@
                 <br> elles te renvoient un résultat.
                 <br>
                 <br>
-                <span class="purple">function </span>
-                <span class="blue2">additionner</span>
-                <span class="blue">(</span>
-                <span class="orange">a</span>
-                <span class="blue">,</span>
-                <span class="orange">b</span>
-                <span class="blue">) {</span>
-                <br>
-                <span class="blue3">return </span>
-                <span class="orange">a</span>
-                <span class="blue"> + </span>
-                <span class="orange"> b</span>
-                <span class="blue">;
-                    <br> } </span>
+                <div class="code">
+                    <span class="purple">function </span>
+                    <span class="blue2">additionner</span>
+                    <span class="blue">(</span>
+                    <span class="orange">a</span>
+                    <span class="blue">,</span>
+                    <span class="orange">b</span>
+                    <span class="blue">) {</span>
+                    <br>
+                    <span class="blue3 indent-1">return </span>
+                    <span class="orange">a</span>
+                    <span class="blue"> + </span>
+                    <span class="orange"> b</span>
+                    <span class="blue">;
+                        <br> } </span>
+                </div>
             </div>
         </div>
         <div class="right">
@@ -66,9 +68,9 @@
                     </li>
                 </ul>
             </nav>
-            <a class="suite" href="coucou.html">
+            <a class="suite" href="fonction.html">
                 <br>
-                <br> Allons découvrir ça ensemble !</a>
+                <br> On continue !</a>
         </div>
     </div>
 </body>
