--- a/tableau-def.html
+++ b/tableau-def.html
@@ -1,36 +1,62 @@
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Cocody</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Cocody</title>
 
-<!-- fonts -->
-<link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
+    <!-- fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
 
-<!-- styles -->
-<link rel="stylesheet" href="styles/reboot.css">
-<link rel="stylesheet" href="styles/styles.css">
-<link rel="stylesheet" href="styles/animate.css">
+    <!-- styles -->
+    <link rel="stylesheet" href="styles/reboot.css">
+    <link rel="stylesheet" href="styles/styles2.css">
+    <link rel="stylesheet" href="styles/animate.css">
 </head>
 
 <body>
-<div class="main around bounceIn animated">
-  <header class="title">Les tableaux</header>
-  <nav class="nav">
-   <ul id="menu_horizontal">
-    <li><a href="index.html">Accueil</a></li>
-    <li><a href="variables-def.html">Les variables</a></li>
-    <li><a href="fonction-def.html">Les fonctions</a></li>
-    <li><a href="condition-def.html">Les conditions</a></li>
-    <li><a href="tableau-def.html"> Les tableaux</a></li>
-    <li><a href="">L'objet</a></li>
-	  </ul>
-  </nav>
-  <div class="description">
-    <div>Un tableau</div>
-  </div>
-  <a class="suite" href="tableau.html">Allons découvrir ça ensemble !</a></div>
+    <div class="main bounceIn animated">
+        <div class="left">
+            <header class="title">Les tableaux</header>
+            <div class="description">
+                Un tableau en programmation, ça n'a rien à voir avec le tableau sur lequel le maître écrit !
+                <br>
+                <br>En fait, un tableau, ça te permet de faire des groupes avec ce que tu veux.
+                <br>
+                <br> Par exemple, tu peux faire un tableau qui rassemble tous tes amis.
+            </div>
+        </div>
+        <div class="right">
+            <nav class="nav">
+                <ul id="menu_horizontal">
+                    <li>
+                        <a href="index.html">Accueil</a>
+                    </li>
+                    <li>
+                        <a href="variables-def.html">Les variables</a>
+                    </li>
+                    <li>
+                        <a href="fonction-def.html">Les fonctions</a>
+                    </li>
+                    <li>
+                        <a href="condition-def.html">Les conditions</a>
+                    </li>
+                    <li>
+                        <a href="tableau-def.html"> Les tableaux</a>
+                    </li>
+                    <li>
+                        <a href="">L'objet</a>
+                    </li>
+                </ul>
+            </nav>
+            <a class="suite" href="tableau.html">
+                <br>
+                <br> Découvrons les tableaux !</a>
+        </div>
+    </div>
 </body>
+
 </html>
